--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             background: #f9fafb;
         }
         #root:empty::after {
-            content: "TeamFlow 로딩 중...";
+            content: "TeamFlow Pro 로딩 중...";
             font-weight: 600;
             color: #4f46e5;
             animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
